fix align icons in community projects

--- a/src/views/Dashboard/DashboardV2.css
+++ b/src/views/Dashboard/DashboardV2.css
@@ -27,8 +27,7 @@
 }
 
 .App-card-title-icon {
-  display: inline-flex;
-  vertical-align: middle;
+  display: flex;
   margin-left: 12px;
 }
 
